y.output
   0  $accept : Program $end

   1  Program : Pre_Dec
   2          | Program Pre_Dec

   3  Pre_Dec : Func_Def
   4          | Dec

   5  $$1 :

   6  $$2 :

   7  Func_Def : Func_Dec '{' $$1 Dec_List $$2 Statement_List '}'

   8  $$3 :

   9  Func_Dec : Re_Type_Spec IDENTIFIER $$3 '(' Para_List ')'

  10  Dec : Func_Dec1
  11      | Normal_Dec

  12  Func_Dec1 : Func_Dec ';'

  13  Normal_Dec : Re_Type_Spec Normal_Dec_List ';'

  14  Normal_Dec_List : Normal_Dec_One
  15                  | Normal_Dec_List ',' Normal_Dec_One

  16  Normal_Dec_One : IDENTIFIER
  17                 | Array
  18                 | IDENTIFIER '=' Init_Exp
  19                 | Array '=' Array_Cont

  20  Para_List : Para
  21            | Para_List ',' Para

  22  Para : Re_Type_Spec IDENTIFIER
  23       | Re_Type_Spec Array
  24       |

  25  Array : IDENTIFIER Array_P

  26  Array_P : '[' INT_P ']'
  27          | Array_P '[' INT_P ']'

  28  Array_Cont : '{' '}'
  29             | '{' Init_Exp_List '}'

  30  Var : IDENTIFIER
  31      | IDENTIFIER Array_Exp

  32  Re_Type_Spec : INT
  33               | CHAR
  34               | BOOL
  35               | DOUBLE
  36               | VOID

  37  $$4 :

  38  $$5 :

  39  Main_Content_Func : '{' $$4 Dec_List $$5 Statement_List '}'

  40  Dec_List :
  41           | Dec_List Dec

  42  Statement : Simple_S
  43            | Switch_S
  44            | While_S
  45            | For_S
  46            | IF_S
  47            | End_S

  48  Simple_S : Var '=' Exp ';'

  49  Array_Exp : '[' Exp ']'
  50            | Array_Exp '[' Exp ']'

  51  Switch_S : SWITCH '(' IDENTIFIER ')' '{' Switch_Cont '}'

  52  Switch_Cont : Case_L
  53              | Case_L Default_Cont

  54  Case_L : Case_One
  55         | Case_L Case_One

  56  Case_One : CASE INT_P ':' Statement_Many
  57           | CASE CHAR_P ':' Statement_Many

  58  Statement_Many :
  59                 | Statement_Many Statement

  60  Default_Cont : DEFAULT ':' Statement_Many

  61  Statement_List :
  62                 | Statement_List Statement

  63  While_S : WHILE '(' Exp ')' Main_Content_Func
  64          | DO Main_Content_Func WHILE '(' Exp ')' ';'

  65  For_S : FOR '(' For_Exp For_Exp Exp ')' Main_Content_Func

  66  For_Exp : ';'
  67          | Exp ';'

  68  IF_S : IF '(' Exp ')' Main_Content_Func
  69       | IF '(' Exp ')' Main_Content_Func ELSE Main_Content_Func

  70  End_S : CONTINUE ';'
  71        | BREAK ';'
  72        | RETURN ';'
  73        | RETURN Exp ';'

  74  Exp : Log_Or_Exp

  75  Log_Or_Exp : Log_And_Exp
  76             | Log_Or_Exp OR2 Log_And_Exp

  77  Log_And_Exp : Log_Not_Exp
  78              | Log_And_Exp AND2 Log_Not_Exp

  79  Log_Not_Exp : Com_Exp
  80              | N Com_Exp

  81  Com_Exp : Add_Min_Exp
  82          | Com_Exp SLT Add_Min_Exp
  83          | Com_Exp SLTE Add_Min_Exp
  84          | Com_Exp EE Add_Min_Exp
  85          | Com_Exp BLTE Add_Min_Exp
  86          | Com_Exp BLT Add_Min_Exp
  87          | Com_Exp NEQ Add_Min_Exp

  88  Add_Min_Exp : Mul_Exp
  89              | Add_Min_Exp PLUS Mul_Exp
  90              | Add_Min_Exp MINUS Mul_Exp

  91  Mul_Exp : Unary_Exp
  92          | Mul_Exp MUL Unary_Exp
  93          | Mul_Exp DIV Unary_Exp
  94          | Mul_Exp MOD Unary_Exp

  95  Unary_Exp : Postfix_Exp
  96            | MINUS Postfix_Exp

  97  Postfix_Exp : Left_Exp
  98              | Left_Exp PLUS2
  99              | Left_Exp MINUS2

 100  Left_Exp : Var
 101           | INT_P
 102           | DOUBLE_P
 103           | CHAR_P
 104           | SCIEN_P
 105           | STR_P
 106           | TRUE
 107           | FALSE
 108           | '(' Exp ')'
 109           | IDENTIFIER '(' ')'
 110           | IDENTIFIER '(' Exp_List ')'

 111  Exp_List : Exp
 112           | Exp_List ',' Exp

 113  Init_Exp_List : Init_Exp
 114                | Init_Exp_List ',' Init_Exp

 115  Init_Exp : Init_Log_Or_Exp

 116  Init_Log_Or_Exp : Init_Log_And_Exp
 117                  | Init_Log_Or_Exp OR2 Init_Log_And_Exp

 118  Init_Log_And_Exp : Init_Log_Not_Exp
 119                   | Init_Log_And_Exp AND2 Init_Log_Not_Exp

 120  Init_Log_Not_Exp : Init_Com_Exp
 121                   | N Init_Com_Exp

 122  Init_Com_Exp : Init_Add_Min_Exp
 123               | Init_Com_Exp SLT Init_Add_Min_Exp
 124               | Init_Com_Exp SLTE Init_Add_Min_Exp
 125               | Init_Com_Exp EE Init_Add_Min_Exp
 126               | Init_Com_Exp BLTE Init_Add_Min_Exp
 127               | Init_Com_Exp BLT Init_Add_Min_Exp
 128               | Init_Com_Exp NEQ Init_Add_Min_Exp

 129  Init_Add_Min_Exp : Init_Mul_Exp
 130                   | Init_Add_Min_Exp PLUS Init_Mul_Exp
 131                   | Init_Add_Min_Exp MINUS Init_Mul_Exp

 132  Init_Mul_Exp : Init_Unary_Exp
 133               | Init_Mul_Exp MUL Init_Unary_Exp
 134               | Init_Mul_Exp DIV Init_Unary_Exp
 135               | Init_Mul_Exp MOD Init_Unary_Exp

 136  Init_Unary_Exp : Init_Postfix_Exp
 137                 | MINUS Postfix_Exp

 138  Init_Postfix_Exp : Init_Left_Exp
 139                   | Init_Left_Exp PLUS2
 140                   | Init_Left_Exp MINUS2

 141  Init_Left_Exp : Var
 142                | INT_P
 143                | DOUBLE_P
 144                | CHAR_P
 145                | SCIEN_P
 146                | STR_P
 147                | TRUE
 148                | FALSE
 149                | '(' Init_Exp ')'

state 0
	$accept : . Program $end  (0)

	VOID  shift 1
	INT  shift 2
	DOUBLE  shift 3
	BOOL  shift 4
	CHAR  shift 5
	.  error

	Program  goto 6
	Func_Dec  goto 7
	Func_Def  goto 8
	Dec  goto 9
	Func_Dec1  goto 10
	Pre_Dec  goto 11
	Re_Type_Spec  goto 12
	Normal_Dec  goto 13


state 1
	Re_Type_Spec : VOID .  (36)

	.  reduce 36


state 2
	Re_Type_Spec : INT .  (32)

	.  reduce 32


state 3
	Re_Type_Spec : DOUBLE .  (35)

	.  reduce 35


state 4
	Re_Type_Spec : BOOL .  (34)

	.  reduce 34


state 5
	Re_Type_Spec : CHAR .  (33)

	.  reduce 33


state 6
	$accept : Program . $end  (0)
	Program : Program . Pre_Dec  (2)

	$end  accept
	VOID  shift 1
	INT  shift 2
	DOUBLE  shift 3
	BOOL  shift 4
	CHAR  shift 5
	.  error

	Func_Dec  goto 7
	Func_Def  goto 8
	Dec  goto 9
	Func_Dec1  goto 10
	Pre_Dec  goto 14
	Re_Type_Spec  goto 12
	Normal_Dec  goto 13


state 7
	Func_Def : Func_Dec . '{' $$1 Dec_List $$2 Statement_List '}'  (7)
	Func_Dec1 : Func_Dec . ';'  (12)

	';'  shift 15
	'{'  shift 16
	.  error


state 8
	Pre_Dec : Func_Def .  (3)

	.  reduce 3


state 9
	Pre_Dec : Dec .  (4)

	.  reduce 4


state 10
	Dec : Func_Dec1 .  (10)

	.  reduce 10


state 11
	Program : Pre_Dec .  (1)

	.  reduce 1


state 12
	Func_Dec : Re_Type_Spec . IDENTIFIER $$3 '(' Para_List ')'  (9)
	Normal_Dec : Re_Type_Spec . Normal_Dec_List ';'  (13)

	IDENTIFIER  shift 17
	.  error

	Array  goto 18
	Normal_Dec_List  goto 19
	Normal_Dec_One  goto 20


state 13
	Dec : Normal_Dec .  (11)

	.  reduce 11


state 14
	Program : Program Pre_Dec .  (2)

	.  reduce 2


state 15
	Func_Dec1 : Func_Dec ';' .  (12)

	.  reduce 12


state 16
	Func_Def : Func_Dec '{' . $$1 Dec_List $$2 Statement_List '}'  (7)
	$$1 : .  (5)

	.  reduce 5

	$$1  goto 21


state 17
	Func_Dec : Re_Type_Spec IDENTIFIER . $$3 '(' Para_List ')'  (9)
	Normal_Dec_One : IDENTIFIER .  (16)
	Normal_Dec_One : IDENTIFIER . '=' Init_Exp  (18)
	Array : IDENTIFIER . Array_P  (25)
	$$3 : .  (8)

	'='  shift 22
	'['  shift 23
	';'  reduce 16
	'('  reduce 8
	','  reduce 16

	$$3  goto 24
	Array_P  goto 25


state 18
	Normal_Dec_One : Array .  (17)
	Normal_Dec_One : Array . '=' Array_Cont  (19)

	'='  shift 26
	';'  reduce 17
	','  reduce 17


state 19
	Normal_Dec : Re_Type_Spec Normal_Dec_List . ';'  (13)
	Normal_Dec_List : Normal_Dec_List . ',' Normal_Dec_One  (15)

	';'  shift 27
	','  shift 28
	.  error


state 20
	Normal_Dec_List : Normal_Dec_One .  (14)

	.  reduce 14


state 21
	Func_Def : Func_Dec '{' $$1 . Dec_List $$2 Statement_List '}'  (7)
	Dec_List : .  (40)

	.  reduce 40

	Dec_List  goto 29


state 22
	Normal_Dec_One : IDENTIFIER '=' . Init_Exp  (18)

	IDENTIFIER  shift 30
	INT_P  shift 31
	DOUBLE_P  shift 32
	SCIEN_P  shift 33
	CHAR_P  shift 34
	STR_P  shift 35
	TRUE  shift 36
	FALSE  shift 37
	'('  shift 38
	MINUS  shift 39
	N  shift 40
	.  error

	Var  goto 41
	Init_Left_Exp  goto 42
	Init_Exp  goto 43
	Init_Log_Or_Exp  goto 44
	Init_Log_And_Exp  goto 45
	Init_Log_Not_Exp  goto 46
	Init_Com_Exp  goto 47
	Init_Add_Min_Exp  goto 48
	Init_Mul_Exp  goto 49
	Init_Unary_Exp  goto 50
	Init_Postfix_Exp  goto 51


state 23
	Array_P : '[' . INT_P ']'  (26)

	INT_P  shift 52
	.  error


state 24
	Func_Dec : Re_Type_Spec IDENTIFIER $$3 . '(' Para_List ')'  (9)

	'('  shift 53
	.  error


state 25
	Array : IDENTIFIER Array_P .  (25)
	Array_P : Array_P . '[' INT_P ']'  (27)

	'['  shift 54
	';'  reduce 25
	'='  reduce 25
	')'  reduce 25
	','  reduce 25


state 26
	Normal_Dec_One : Array '=' . Array_Cont  (19)

	'{'  shift 55
	.  error

	Array_Cont  goto 56


state 27
	Normal_Dec : Re_Type_Spec Normal_Dec_List ';' .  (13)

	.  reduce 13


state 28
	Normal_Dec_List : Normal_Dec_List ',' . Normal_Dec_One  (15)

	IDENTIFIER  shift 57
	.  error

	Array  goto 18
	Normal_Dec_One  goto 58


state 29
	Func_Def : Func_Dec '{' $$1 Dec_List . $$2 Statement_List '}'  (7)
	Dec_List : Dec_List . Dec  (41)
	$$2 : .  (6)

	VOID  shift 1
	INT  shift 2
	DOUBLE  shift 3
	BOOL  shift 4
	CHAR  shift 5
	IDENTIFIER  reduce 6
	FOR  reduce 6
	WHILE  reduce 6
	DO  reduce 6
	IF  reduce 6
	SWITCH  reduce 6
	RETURN  reduce 6
	BREAK  reduce 6
	CONTINUE  reduce 6
	'}'  reduce 6

	Func_Dec  goto 59
	Dec  goto 60
	Func_Dec1  goto 10
	$$2  goto 61
	Re_Type_Spec  goto 12
	Normal_Dec  goto 13


state 30
	Var : IDENTIFIER .  (30)
	Var : IDENTIFIER . Array_Exp  (31)

	'['  shift 62
	';'  reduce 30
	'='  reduce 30
	')'  reduce 30
	'}'  reduce 30
	PLUS2  reduce 30
	MINUS2  reduce 30
	MUL  reduce 30
	DIV  reduce 30
	MOD  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	AND2  reduce 30
	OR2  reduce 30
	NEQ  reduce 30
	SLT  reduce 30
	BLT  reduce 30
	SLTE  reduce 30
	BLTE  reduce 30
	EE  reduce 30
	','  reduce 30

	Array_Exp  goto 63


state 31
	Init_Left_Exp : INT_P .  (142)

	.  reduce 142


state 32
	Init_Left_Exp : DOUBLE_P .  (143)

	.  reduce 143


state 33
	Init_Left_Exp : SCIEN_P .  (145)

	.  reduce 145


state 34
	Init_Left_Exp : CHAR_P .  (144)

	.  reduce 144


state 35
	Init_Left_Exp : STR_P .  (146)

	.  reduce 146


state 36
	Init_Left_Exp : TRUE .  (147)

	.  reduce 147


state 37
	Init_Left_Exp : FALSE .  (148)

	.  reduce 148


state 38
	Init_Left_Exp : '(' . Init_Exp ')'  (149)

	IDENTIFIER  shift 30
	INT_P  shift 31
	DOUBLE_P  shift 32
	SCIEN_P  shift 33
	CHAR_P  shift 34
	STR_P  shift 35
	TRUE  shift 36
	FALSE  shift 37
	'('  shift 38
	MINUS  shift 39
	N  shift 40
	.  error

	Var  goto 41
	Init_Left_Exp  goto 42
	Init_Exp  goto 64
	Init_Log_Or_Exp  goto 44
	Init_Log_And_Exp  goto 45
	Init_Log_Not_Exp  goto 46
	Init_Com_Exp  goto 47
	Init_Add_Min_Exp  goto 48
	Init_Mul_Exp  goto 49
	Init_Unary_Exp  goto 50
	Init_Postfix_Exp  goto 51

